chore: #277 Remove URL constructor deprecations
Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>